--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,12 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "cors": "^2.8.5",
     "kafkajs": "^2.2.4",
     "redis": "^5.6.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.14",
     "prisma": "^6.12.0",
